--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+## Frontend
 # dependencies
 frontend/node_modules
 frontend/.pnp
@@ -21,3 +20,7 @@ frontend/.env.production.local
 frontend/npm-debug.log*
 frontend/yarn-debug.log*
 frontend/yarn-error.log*
+
+## Backend
+backend/node_modules
+backend/.env
