events mapped from backend

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ frontend/npm-debug.log*
 frontend/yarn-debug.log*
 frontend/yarn-error.log*
 
+frontend/.env
+
 ## Backend
 backend/node_modules
 backend/.env
