--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ frontend/.env.production.local
 frontend/npm-debug.log*
 frontend/yarn-debug.log*
 frontend/yarn-error.log*
-
+frontend/.env
 ## Backend
 backend/node_modules
 backend/.env
