--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.3",
     "cities.json": "^1.1.18",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
