--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-scroll-to-top": "^3.0.0",
+    "react-toastify": "^9.1.1",
     "styled-components": "^5.3.8",
     "web-vitals": "^2.1.4"
   },
